--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,3 +1,8 @@
 doctype html
+md-toolbar(color="primary")
+  content(fxLayout="row", fxLayoutAlign="space-between center", fxFlexFill)
+    .right Hilarity Cards
+    .left
+      button(md-raised-button, routerLink="/login", color="accent") JOIN
+
 router-outlet
-p It Works!
