--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,6 +1,10 @@
+@import '~@angular/material/core/theming/all-theme';
+
 // Material Theming
 $primary: mat-palette($mat-purple);
 $accent: mat-palette($mat-green);
 $warn: mat-palette($mat-red);
 
-$theme: mat-light-theme($primary, $accent, $warn);
+$theme: mat-dark-theme($primary, $accent, $warn);
+
+$background-color: map-get($mat-grey, 900);
