fix links to use auth service

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -3,6 +3,6 @@ md-toolbar(color="primary")
   content(fxLayout="row", fxLayoutAlign="space-between center", fxFlexFill)
     .right(routerLink="/") Hilarity Cards
     .left
-      button(md-raised-button, routerLink="/auth", color="accent") JOIN
+      button(md-raised-button, color="accent", (click)="login()") JOIN
 
 router-outlet
