--- a/src/app/home/home.component.pug
+++ b/src/app/home/home.component.pug
@@ -13,4 +13,4 @@ div(fxLayout="column", fxLayoutAlign="start center")
     <a href="https://github.com/ShadowManu/hilarity-cards" target="_blank">GitHub</a>,
     where you can see development and contribute. Please do so!
 
-  button(md-raised-button, routerLink="/auth", color="primary") SIGN IN AND PLAY!
+  button(md-raised-button, color="primary", (click)="login()") JOIN THE PARTY!
