fix styles on home page

--- a/src/app/home/home.component.pug
+++ b/src/app/home/home.component.pug
@@ -1,5 +1,5 @@
 doctype html
-div(fxLayout="column", fxLayoutAlign="start center")
+.container(fxLayout="column", fxLayoutAlign="start center")
   h1 Hilarity Cards
   p.subheading A game where being a disgusting human being is actually encouraged
 
