--- a/src/app/games/index/game-index.component.pug
+++ b/src/app/games/index/game-index.component.pug
@@ -1,11 +1,12 @@
+doctype html
 .container(fxLayout="column", fxLayoutAlign="start stretch")
   // No games
   div(*ngIf="(games | async)?.length === 0", fxLayout="column", fxLayoutAlign="start center")
     p There are no games running.
-    button(md-raised-button, color="primary") CREATE ONE
+    button(md-raised-button, color="primary", routerLink="/games/new") CREATE ONE
 
   // Games list
-  md-card(*ngFor="let game of gamesObs | async")
-    md-card-title {{ game.id }} | {{ game.title }}
+  md-card(*ngFor="let game of games | async")
+    md-card-title {{ game.$key }} | {{ game.title }}
     md-card-subtitle hostId: {{ game.hostId }}
 
