move navbar template to shared component

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,8 +1,3 @@
 doctype html
-md-toolbar(color="primary")
-  content(fxLayout="row", fxLayoutAlign="space-between center", fxFlexFill)
-    .right(routerLink="/") Hilarity Cards
-    .left
-      button(md-raised-button, color="accent", (click)="login()") JOIN
-
+hc-navbar
 router-outlet
